# libvirt

./: Makefile.am  configure.ac
devtools/wireshark-dissector/: Makefile.am  README.md  xdr_proto_files
devtools/wireshark-dissector/src/: Makefile.am  moduleinfo.h  packet-libvirt.c  packet-libvirt.h
devtools/wireshark-dissector/util/: genxdrstub.pl
